Started to create the Quick Interview section and also started to modify Angular code

--- a/src/main/webapp/app/partials/quick-interview.html
+++ b/src/main/webapp/app/partials/quick-interview.html
@@ -1,9 +1,18 @@
 <div class="hero-unit">
 	<h2>Quick Interview</h2>
-	<p>
-	   User: 
-	</p>
-	<p>
-		<a href="#" class="btn btn-primary btn-large">Start &raquo;</a>
-	</p>
+	<form>
+        <fieldset>
+            <label>Name</label>
+            <input type="text" placeholder="Name of the candidate">
+            <label>Difficulty</label>
+            <div class="btn-group">
+                <button class="btn active">Basic</button>
+                <button class="btn">Intermediate</button>
+                <button class="btn">Advanced</button>
+            </div>
+            <br>
+            <br>
+            <button class="btn btn-primary btn-large">Start &raquo;</button>
+        </fieldset>
+	</form>
 </div>
