--- a/src/main/webapp/app/partials/side-menu.html
+++ b/src/main/webapp/app/partials/side-menu.html
@@ -1,9 +1,7 @@
 <div class="well sidebar-nav">
-	<ul class="nav nav-list">
-		<li class="nav-header">Interviews</li>
-		<li><a href="#/candidates">Candidates</a></li>
-		<li class="nav-header">Administration</li>
-		<li><a href="#/questions">Questions</a></li>
-		<li><a href="#/tags">Tags</a></li>
-	</ul>
+    <ul class="nav nav-list" ng-transclude>
+        <li ng-repeat="item in items" ng-class="{active: item.selected}">
+            <a href="{{item.url}}" ng-click="select(item)">{{item.title}}</a>
+        </li>
+    </ul>
 </div>
