--- a/src/main/webapp/app/partials/quick-interview.html
+++ b/src/main/webapp/app/partials/quick-interview.html
@@ -5,12 +5,12 @@
         <fieldset>
             <label>Name</label>
             <input type="text" placeholder="Name of the candidate">
-            <label>Difficulty</label>
+            <label>Level</label>
 
             <div class="btn-group">
-                <button class="btn active">Basic</button>
+                <button class="btn active">Junior</button>
                 <button class="btn">Intermediate</button>
-                <button class="btn">Advanced</button>
+                <button class="btn">Senior</button>
             </div>
             <br>
             <br>
