--- a/src/main/webapp/app/partials/skills.html
+++ b/src/main/webapp/app/partials/skills.html
@@ -1,6 +1,5 @@
 <div>
-    <h2>Tags</h2>
-    <h3>{{mytest}}</h3>
+    <h2>Skills</h2>
     <table class="table table-striped table-condensed">
         <thead>
             <tr>
@@ -10,11 +9,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="tag in tags">
+            <tr ng-repeat="skill in skills">
                 <td>
-                    <a href="#/tags/edit/{{tag.name}}">{{tag.name}}</a>
+                    <a href="">{{skill.name}}</a>
                 </td>
-                <td>{{tag.description}}</td>
+                <td>{{skill.description}}</td>
                 <td>
                     <i class="icon-pencil"></i>
                     <i class="icon-trash"></i>
