Removed side-menu directive and replaced it by 'ng-include'

--- a/src/main/webapp/app/partials/header.html
+++ b/src/main/webapp/app/partials/header.html
@@ -15,7 +15,7 @@
                 </p>
                 <ul class="nav">
                     <li class="active"><a href="#"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#about"><i class="icon-beer icon-white"></i>&nbsp;About</a></li>
                 </ul>
             </div>
         </div>
