--- a/src/main/webapp/app/partials/skills.html
+++ b/src/main/webapp/app/partials/skills.html
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="skill in skills">
+            <tr ng-repeat="skill in allSkills">
                 <td>
                     <a href="#/skills/{{skill.name}}">{{skill.name}}</a>
                 </td>
