Started modifying the skills feature to delete a record.

--- a/src/main/webapp/app/partials/skills.html
+++ b/src/main/webapp/app/partials/skills.html
@@ -17,7 +17,7 @@
                 <td>
                     <div class="pull-right">
                         <button class="btn btn-mini"><i class="icon-pencil"></i>&nbsp;Modify</button>
-                        <button class="btn btn-danger btn-mini"><i class="icon-trash icon-large"></i>&nbsp;Delete</a></button>
+                        <button class="btn btn-danger btn-mini"><i class="icon-trash icon-large"></i>&nbsp;Remove</a></button>
                     </div>
                 </td>
             </tr>
