Added initial support for removing skills

--- a/src/main/webapp/app/partials/skills.html
+++ b/src/main/webapp/app/partials/skills.html
@@ -16,8 +16,8 @@
                 <td>{{skill.description}}</td>
                 <td>
                     <div class="pull-right">
-                        <button class="btn btn-mini"><i class="icon-pencil"></i>&nbsp;Modify</button>
-                        <button class="btn btn-danger btn-mini"><i class="icon-trash icon-large"></i>&nbsp;Remove</a></button>
+                        <button ng-click="modifySkill(skill)" class="btn btn-mini"><i class="icon-pencil"></i>&nbsp;Modify</button>
+                        <button ng-click="removeSkill(skill)" class="btn btn-danger btn-mini"><i class="icon-trash icon-large"></i>&nbsp;Remove</a></button>
                     </div>
                 </td>
             </tr>
