Used radio button component from angular ui

--- a/src/main/webapp/app/partials/quick-interview.html
+++ b/src/main/webapp/app/partials/quick-interview.html
@@ -8,9 +8,9 @@
             <label>Level</label>
 
             <div class="btn-group">
-                <button class="btn active">Junior</button>
-                <button class="btn">Intermediate</button>
-                <button class="btn">Senior</button>
+                <button class="btn" ng-model="level" btn-radio="'Junior'">Junior</button>
+                <button class="btn" ng-model="level" btn-radio="'Intermediate'">Intermediate</button>
+                <button class="btn" ng-model="level" btn-radio="'Senior'">Senior</button>
             </div>
             <br>
             <br>
