--- a/src/main/webapp/app/partials/skill-edit.html
+++ b/src/main/webapp/app/partials/skill-edit.html
@@ -7,18 +7,19 @@
             <div class="control-group">
                 <label class="control-label" for="name">Name:</label>
                 <div class="controls">
-                    <input id="name" type="text" placeholder="Name" value="{{skill.name}}" required>
+                    <input id="name" class="input-small" type="text" placeholder="Name" value="{{skill.name}}" required>
                 </div>
             </div>
             <div class="control-group">
                 <label class="control-label" for="description">Description:</label>
                 <div class="controls">
-                    <textarea id="description" placeholder="Description">{{skill.description}}</textarea>
+                    <textarea id="description" rows="4" class="input-xlarge" placeholder="Description">{{skill.description}}</textarea>
                 </div>
             </div>
         </form>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary">Save</button>
+        <button class="btn btn-small" ng-click="closeSkillDialog()">Cancel</button>
+        <button class="btn btn-primary" ng-click="saveSkill()">Save Changes</button>
     </div>
 </div>
