--- a/src/main/webapp/app/partials/skill-edit.html
+++ b/src/main/webapp/app/partials/skill-edit.html
@@ -7,13 +7,24 @@
             <div class="control-group">
                 <label class="control-label" for="name">Name:</label>
                 <div class="controls">
-                    <input id="name" class="input-small" type="text" placeholder="Name" value="{{skill.name}}" required>
+                    <input id="name"
+                           ng-model="skill.name"
+                           class="input-small"
+                           type="text"
+                           placeholder="Name"
+                           required>
+                    </input>
                 </div>
             </div>
             <div class="control-group">
                 <label class="control-label" for="description">Description:</label>
                 <div class="controls">
-                    <textarea id="description" rows="4" class="input-xlarge" placeholder="Description">{{skill.description}}</textarea>
+                    <textarea id="description"
+                              ng-model="skill.description"
+                              rows="4"
+                              class="input-xlarge"
+                              placeholder="Description">
+                    </textarea>
                 </div>
             </div>
         </form>
