Added support for adding new skills

--- a/src/main/webapp/app/partials/skill-edit.html
+++ b/src/main/webapp/app/partials/skill-edit.html
@@ -9,7 +9,7 @@
                 <div class="controls">
                     <input id="name"
                            ng-model="skill.name"
-                           class="input-small"
+                           class="input-medium"
                            type="text"
                            placeholder="Name"
                            required>
