--- a/src/main/webapp/app/partials/skills.html
+++ b/src/main/webapp/app/partials/skills.html
@@ -1,5 +1,7 @@
 <div>
-    <h2><i class="icon-tags"></i>&nbsp;Skills</h2>
+    <h2>
+        <i class="icon-tags"></i>&nbsp;Skills&nbsp;&nbsp;<button ng-click="newSkill()" class="btn btn-primary">New</button>
+    </h2>
     <table class="table table-striped table-condensed">
         <thead>
             <tr>
