--- a/src/main/webapp/app/partials/questions.html
+++ b/src/main/webapp/app/partials/questions.html
@@ -1,3 +1,16 @@
-<div>
-    <h2><i class="icon-book"></i>&nbsp;Questions</h2>
+<div ng-controller="questionViewCtrl">
+    <h2>
+        <i class="icon-book"></i>&nbsp;Questions&nbsp;&nbsp;<button class="btn btn-primary">New</button>
+    </h2>
+    <table class="table table-striped table-condensed">
+        <tbody>
+            <tr ng-repeat="question in questions">
+                <td>
+                    <strong>Question:&nbsp;</strong><small>{{question.question}}</small><br>
+                    <strong>Expected Answer:&nbsp;</strong><small>{{question.expectedAnswer}}</small><br>
+                    <strong>Level:&nbsp;</strong><small>{{question.level}}</small>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
